--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.1",
